# codeless-workspace

./: .gitignore  CLAUDE.md  DEMO-UI.md  ai-runner.PATCHES.md  mani.yaml
DOCS/: AGENT-CONTROL-PLANE-USAGE.md  AGENT-CONTROL-PLANE.md  AGENT.md  ASSISTANT-SCOPE.md  CHAT-EDITS-JOB-SPEC.md  CODEBASE-ANALYSIS.md  DOGFOOD-MVP.md  HACKLINE-DEV.md  JOB-DIR-KICKOFF.md  JOB-DIR.md  JOB-EXAMPLE.md  JOB-LOOP-KICKOFF.template.md  JOB-LOOP.md  JOB-MODEL.md  JOB-UI.md  JOB-WORKFLOW.md  JOBS-UX.md  LOOP-CODER.md  MANI.md  MOXXY-INTEGRATION.md  PROGRESS.md  SCOPE-MUTABLE-UI.md  SCOPE-SLACK-INTEGRATION.md  SCOPE.md  SESSION-MUTABLE-SCOPE.md  SESSION-PEER-REVIEW-IMPOVEMNTS.md  SESSION-PEER-REVIEW-IMPROVEMENTS.md  START-SERVER-UI.md  TOOLS-PORTING.md  UI-ARCHITECTURE.md  UI-PORT-AUDIT.md  WORKSPACE-ATTACH.md
DOCS/sessions/: 2026-05-12-bootstrap-workspace.md  2026-05-12-claude-runner-demo-and-job-authoring.md  2026-05-12-demo-end-to-end.md  2026-05-12-loopback-no-auth.md  2026-05-12-phase-1-crate-skeleton.md  2026-05-12-phase-2-stage-15-and-fs-slice.md  2026-05-12-phase-2-ui-rpc-conversion.md  2026-05-12-phase-2a-persistence.md  2026-05-12-phase-2b-runners.md  2026-05-12-phase-2c-cli-completion.md  2026-05-12-phase-3a-PR-DRAFT.md  2026-05-12-phase-3a-terax-demo.md  2026-05-12-phase-3b-rust-http-client.md  2026-05-12-ux-grind.md  2026-05-15-assistant-followups.md
ai-runner/: Cargo.toml
ai-runner/src/: defaults.rs  lib.rs  registry.rs  runner.rs  types.rs
ai-runner/src/runners/: anthropic.rs  claude.rs  codex.rs  copilot.rs  mod.rs  openai.rs
ai-runner/tests/: claude_cli_edit.rs  runner_contract.rs
hackline/: CLAUDE.md  Cargo.toml  DECISIONS.md  Makefile  SCOPE.md  pnpm-lock.yaml
hackline/.codeless/jobs/ap/: CHAT.md  SCOPE.md  WORKFLOW.md  template.yaml
hackline/.codeless/jobs/hackline-api-docs/: template.yaml
hackline/.codeless/jobs/stage-6-7/: CHAT.md  SCOPE.md  WORKFLOW.md  template.yaml
hackline/.github/workflows/: ci.yml
hackline/.hackline-dev/: gateway.toml
hackline/DOCS/: CODEBASE-ANALYSIS.md  REST-API.md  openapi.yaml
hackline/clients/hackline-ts/: README.md  package.json
hackline/clients/hackline-ts/src/: client.ts  http-client.ts  index.ts  mock-client.ts  types.ts  wire.ts
hackline/clients/hackline-ts/test/: devices.test.ts
hackline/crates/hackline-agent/: Cargo.toml
hackline/crates/hackline-agent/src/: config.rs  connect.rs  error.rs  info.rs  liveliness.rs  main.rs
hackline/crates/hackline-agent/src/diag/: mod.rs
hackline/crates/hackline-cli/: Cargo.toml
hackline/crates/hackline-cli/src/: client.rs  config.rs  error.rs  main.rs  output.rs
hackline/crates/hackline-cli/src/cmd/: events.rs  login.rs  mod.rs  whoami.rs
hackline/crates/hackline-cli/src/cmd/device/: add.rs  list.rs  remove.rs  show.rs
hackline/crates/hackline-cli/src/cmd/tunnel/: add.rs  list.rs  remove.rs
hackline/crates/hackline-cli/src/cmd/user/: add.rs  list.rs  remove.rs
hackline/crates/hackline-client/: Cargo.toml
hackline/crates/hackline-client/src/: lib.rs
hackline/crates/hackline-core/: Cargo.toml
hackline/crates/hackline-core/examples/: spike.rs
hackline/crates/hackline-core/src/: bridge.rs  error.rs  session.rs
hackline/crates/hackline-gateway/: Cargo.toml
hackline/crates/hackline-gateway/src/: cmd_delivery.rs  config.rs  error.rs  events_bus.rs  lib.rs  liveliness.rs  metrics.rs  msg_fanin.rs  state.rs  tls.rs
hackline/crates/hackline-gateway/src/api/: health.rs  mod.rs  router.rs
hackline/crates/hackline-gateway/src/api/api_call/: call.rs
hackline/crates/hackline-gateway/src/api/audit/: list.rs
hackline/crates/hackline-gateway/src/api/claim/: post.rs  status.rs
hackline/crates/hackline-gateway/src/api/cmd/: cancel.rs  list.rs  send.rs
hackline/crates/hackline-gateway/src/api/devices/: create.rs  delete.rs  get.rs  health.rs  health_probe.rs  info.rs  list.rs  list_health.rs  mod.rs
hackline/crates/hackline-gateway/src/api/events/: all.rs  list.rs  mod.rs  per_device.rs  stream.rs
hackline/crates/hackline-gateway/src/api/logs/: list.rs  stream.rs
hackline/crates/hackline-gateway/src/api/tunnels/: create.rs  delete.rs  list.rs
hackline/crates/hackline-gateway/src/api/users/: create.rs  delete.rs  list.rs  mint_token.rs
hackline/crates/hackline-gateway/src/auth/: claim.rs  middleware.rs  scope.rs  token.rs
hackline/crates/hackline-gateway/src/db/: audit.rs  claim.rs  cmd_outbox.rs  devices.rs  events.rs  logs.rs  migrations.rs  mod.rs  orgs.rs  pool.rs  tunnels.rs  users.rs
hackline/crates/hackline-gateway/src/tunnel/: http_router.rs  manager.rs  tcp_listener.rs
hackline/crates/hackline-gateway/tests/: cmd_plane.rs  message_plane.rs  org_isolation.rs
hackline/crates/hackline-proto/: Cargo.toml
hackline/crates/hackline-proto/examples/: wire_ts.rs
hackline/crates/hackline-proto/src/: agent_info.rs  connect.rs  error.rs  event.rs  keyexpr.rs  lib.rs  msg.rs  zid.rs
hackline/crates/hackline-proto/tests/: specta_snapshot.rs  wire.ts.snap
hackline/runs/01KRJ5R88FY87PTXF1TQ6Q5ATM/: handover.md
hackline/runs/01KRJ9HYYVDEGNKZK0D14G97JA/: handover.md
hackline/runs/01KRJA2Y20Z5X6Z2TD41V90YH6/: handover.md
hackline/runs/01KRJA47BM5TYG3JZVEXCQ8HRE/: handover.md
hackline/runs/01KRJDD9PEVFJBJF8ZZTPTTTAQ/: handover.md
hackline/runs/01KRJDR51F70X96SWF1X605F1J/: handover.md
hackline/runs/01KRJDS52P4JYBT3BTSFTE2G2J/: handover.md
hackline/runs/01KRJE4BER4WP6BFWGQY8XJS7G/: handover.md
hackline/runs/01KRJJYQZJX7F5ETB6R696PXZ8/: handover.md
hackline/runs/01KRK2JFQ0Y35M2P656ZWRR1EX/: handover.md
hackline/ui/hackline-ui/: README.md  vite.config.ts
hackline/ui/hackline-ui/src/: main.tsx
hackline/ui/hackline-ui/src/lib/: utils.ts
hackline/ui/hackline-ui/src/lib/api/: index.ts
hackline/ui/hackline-ui/src/modules/audit/: AuditPage.tsx
hackline/ui/hackline-ui/src/modules/cmd/: CmdOutboxPage.tsx
hackline/ui/hackline-ui/src/modules/devices/: DeviceDetailPage.tsx  DevicesPage.tsx
runs/01KRM9YRC9C8N7N7ZTJ03WC533/: handover.md
runs/01KRMCGGYFERY03CJ9NWQGP4D1/: handover.md
scripts/: smoke-claude-demo.sh  smoke-demo.sh
(+8 files in other folders)
