[package]
name = "ai-runner"
description = "Unified AI runner — CLI (claude-wrapper, codex) and REST (anthropic-ai-sdk, async-openai)"
# `ai-runner` sits outside the codeless workspace directory tree
# (`codeless-workspace/ai-runner/` is a sibling of `codeless/`), so
# Cargo's upward search cannot auto-locate the workspace root. This
# explicit pointer is the only edit codeless vendoring imposes on
# the upstream crate; everything else flows from rubix-agent.
workspace = "../codeless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
# Workspace
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing.workspace = true
futures-util.workspace = true

# Claude Code CLI wrapper.
# Pinned to an exact version (no caret): the wrapper parses the `claude`
# binary's stream-json output, which Anthropic does not promise to keep
# stable across releases. A weekly CI canary (separate job) tracks the
# latest upstream; production stays on this exact pin until the canary
# signals an upgrade is safe.
claude-wrapper = "=0.5.1"

# Anthropic REST API
anthropic-ai-sdk = "0.2.27"

# OpenAI REST API
async-openai = { version = "0.35.0", features = ["chat-completion"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
