[workspace]
resolver = "2"
members = [
    "crates/hackline-proto",
    "crates/hackline-core",
    "crates/hackline-agent",
    "crates/hackline-gateway",
    "crates/hackline-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NubeDev/hackline"
rust-version = "1.78"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
