[workspace]
resolver = "2"
members = [
    "crates/hackline-proto",
    "crates/hackline-core",
    "crates/hackline-agent",
    "crates/hackline-gateway",
    "crates/hackline-cli",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NubeDev/hackline"
rust-version = "1.78"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
zenoh = { version = "1.9", default-features = false, features = ["transport_tcp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures = "0.3"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
