[package]
name = "hackline-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "TCP <-> Zenoh bridging helpers shared by gateway and agent"

[lints]
workspace = true

[dependencies]
hackline-proto = { path = "../hackline-proto" }
