[package]
name = "hackline-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cloud-side hackline gateway: REST + SSE + TCP listeners + SQLite"

[lints]
workspace = true

# Multiple binaries auto-discovered from src/bin/*.
# - serve         : run the gateway
# - reset-claim   : wipe users + reissue claim
# - print-claim   : print the pending claim token (only while pending)

[dependencies]
hackline-proto = { path = "../hackline-proto" }
hackline-core  = { path = "../hackline-core" }
tokio = { workspace = true }
uuid = { workspace = true }
zenoh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
hackline-client = { path = "../hackline-client" }
anyhow = { workspace = true }
