[package]
name = "hackline-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Wire types and key-expression builders for hackline"

[lints]
workspace = true

[dependencies]
# Pure types only. No tokio, no zenoh, no filesystem. (SCOPE R1.)
